CLC-2709 First working Rails 4 commit